--- a/.github/workflows/labeler.yml
+++ b/.github/workflows/labeler.yml
@@ -5,16 +5,17 @@
 # file with configuration.  For more information, see:
 # https://github.com/actions/labeler/blob/master/README.md
 
+# Add 'repo' label to any root file changes
+repo:
+  - ./*
 name: Labeler
-on: [pull_request]
-
+on:
+- pull_request
+  
 jobs:
-  label:
-
+  triage:
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/labeler@v2
       with:
         repo-token: "${{ secrets.GITHUB_TOKEN }}"
-
